[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sandbox-autogen"
version = "0.1.0"
description = "**🤖 Sandbox for experimenting with Microsoft AutoGen multi-agent framework**"
requires-python = ">=3.10"
dependencies = []

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
